poke/testsuite/poke.pkl/units-diag-2.pk
/* { dg-do compile } */

defun foo = string: { return "foo"; }

defunit x = foo; /* { dg-error "" } */
